[metadata]
version = attr: qumin.__version__
name = qumin
url = https://github.com/XachaB/Qumin
license = GPLv3
author = Sacha Beniamine
description = Qumin: Quantitative Modelling of Inflection
long_description = file: README.rst, LICENSE
long_description_content_type = text/rst
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    frictionless
    scipy
    matplotlib
    networkx
    pydot
    tqdm
    seaborn
    tabulate
    concepts
    hydra-core
test_suite = tests

[options.extras_require]
test =
    hypothesis

[options.package_data]
* =
    *.js
    *.css
    *.yaml

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[options.entry_points]
console_scripts =
    qumin = qumin.cli:qumin_command